tests/lean/argNameIfMacroScopes.lean.expected.out
argNameIfMacroScopes.lean:5:4-5:5: error: don't know how to synthesize placeholder
context:
x : Nat
⊢ Nat
