tests/lean/argNameIfMacroScopes.lean
def g : Nat → Nat :=
  fun _ => 0

def f (x : Nat) : Nat :=
  g _
